# synth

./: .gitignore  CMakeLists.txt  LICENSE.md  README.md  Synth.jucer
Builds/VisualStudio2022/: CMakeLists.txt  Synth.sln  Synth_SharedCode.vcxproj  Synth_SharedCode.vcxproj.filters  Synth_StandalonePlugin.vcxproj  Synth_VST3.vcxproj
CMake/: Findtracy.cmake
JuceLibraryCode/: JucePluginDefines.h
Memory/: CMakeLists.txt
Memory/Source/: empty.cpp  polymorphic_readonly_array.h
Memory/Tests/: CMakeLists.txt  PolymorphicReadonlyArrayTest.cpp
MidiGenerator/: CMakeLists.txt
MidiGenerator/Source/: Arpeggiator.h  PluginProcessor.cpp  PluginProcessor.h  RingIndex.h
MidiGenerator/Tests/: CMakeLists.txt  RingIndexTest.cpp
Source/: AdsrPanel.cpp  AdsrPanel.h  Constants.cpp  Constants.h  EnvelopeComponent.cpp  EnvelopeComponent.h  FilterComponent.cpp  FilterComponent.h  OscControlJPanel.cpp  OscControlJPanel.h  OscWaveTable.cpp  OscWaveTable.h  Oscillator.cpp  Oscillator.h  Params.cpp  Params.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  SpectrumAnalyzer.cpp  SpectrumAnalyzer.h  SynthSound.cpp  SynthSound.h  SynthVoice.cpp  SynthVoice.h  Typedefs.h  Waves.h
Source/audio/lfo/: LFO.cpp  LFO.h
Source/audio/osc/: SynthSound.cpp  SynthSound.h  SynthVoice.cpp  SynthVoice.h
Source/audio/wave/: WaveTables.cpp  WaveTables.h
Source/juce/: juce_audio_processors.h  juce_core.h  juce_dsp.h  juce_gui_basics.h  juce_gui_extra.h  pragma_wrapper.h
Source/logging/: HighFrequencyLogger.h  Measurement.h
Source/other/: Grid.h  HighFrequencyLogger.h  polymorphic_readonly_array.h
Source/ui/: BodyPanel.cpp  BodyPanel.h  MainPanel.cpp  MainPanel.h  MasterPanel.cpp  MasterPanel.h  MatrixPanel.cpp  MatrixPanel.h  TopPanel.cpp  TopPanel.h
Source/ui/main/: LeftPanel.cpp  LeftPanel.h  RightPanel.cpp  RightPanel.h
Source/ui/main/left/: OscPanel.cpp  OscPanel.h
Source/ui/main/left/osc/: Controls.cpp  Controls.h  WaveComponent.cpp  WaveComponent.h
Source/ui/main/left/osc/wave/: Wave.h
Source/ui/main/right/: EnvPanel.cpp  EnvPanel.h  FilterPanel.cpp  FilterPanel.h  FmOscPanel.cpp  FmOscPanel.h
Source/ui/main/right/env/: Body.cpp  Body.h
Source/ui/main/right/env/adsr/: ADSRPanel.cpp  ADSRPanel.h  ADSRWave.cpp  ADSRWave.h
Source/ui/main/right/env/lfo/: LFOPanel.cpp  LFOPanel.h  LFOWave.cpp  LFOWave.h
Source/ui/top/: LogoComponent.cpp  LogoComponent.h  MenuComponent.cpp  MenuComponent.h  PresetComponent.cpp  PresetComponent.h
Source/wave/: WaveTables.cpp  WaveTables.h
Synth/: CMakeLists.txt
Synth/Source/: Constants.cpp  Constants.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  defs.h
Synth/Source/audio/: Engine.h
Synth/Source/audio/lfo/: LFO.cpp  LFO.h
Synth/Source/audio/osc/: SynthSound.cpp  SynthVoice.cpp  SynthVoice.h
Synth/Source/audio/wave/: WaveTables.h
Synth/Source/logging/: Measurement.h
Synth/Source/other/: Grid.cpp  Grid.h
Synth/Source/ui/: BodyPanel.h  MainPanel.h  MatrixPanel.cpp  TopPanel.cpp
Synth/Source/ui/main/: RightPanel.cpp
Synth/Source/ui/main/left/: OscPanel.h
Synth/Source/ui/main/left/osc/: Controls.cpp  WaveComponent.h
Synth/Source/ui/main/left/osc/wave/: Wave.h
Synth/Source/ui/main/right/: EnvPanel.cpp  FilterPanel.cpp  FilterPanel.h  FmOscPanel.cpp  FmOscPanel.h
Synth/Source/ui/main/right/env/: Body.h
Synth/Source/ui/main/right/env/adsr/: ADSRPanel.cpp  ADSRWave.cpp
Synth/Source/ui/main/right/env/lfo/: LFOPanel.cpp  LFOWave.cpp
Synth/Source/ui/top/: LogoComponent.cpp  MenuComponent.cpp  PresetComponent.cpp  PresetComponent.h
Synth/Tests/: CMakeLists.txt  SynthTest.cpp
Tests/: CMakeLists.txt  PolymorphicReadonlyArrayTest.cpp  SynthTest.cpp
